--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Discord Bot Authorization</title>
+</head>
+<body>
+    <h1>Authorize the Bot</h1>
+    <a href="/login">Login with Discord</a>
+</body>
+</html>
